Actions
Bug #11425
closedsmserverd: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
myaudit.c: In function 'audit_init': myaudit.c:114:25: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] door_dp->audit_text[0] = NULL; ^ myaudit.c:115:26: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] door_dp->audit_text1[0] = NULL; ^ cc1: all warnings being treated as errors
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 14916c4b3821f9ac20da481ae3d8f73f1f6a16d8
commit 14916c4b3821f9ac20da481ae3d8f73f1f6a16d8 Author: Toomas Soome <tsoome@me.com> Date: 2019-07-30T18:30:55.000Z 11425 smserverd: NULL pointer errors Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions